--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tanstack/react-query": "^4.36.1",
     "antd": "^5.16.1",
     "axios": "^1.6.8",
+    "cookies-next": "^4.2.1",
     "js-cookie": "^3.0.5",
     "next": "13.5.6",
     "next-intl": "^3.12.1",
@@ -21,6 +22,7 @@
     "react-query": "^3.39.3",
     "react-redux": "^9.1.1",
     "redux": "^5.0.1",
+    "redux-persist": "^6.0.0",
     "sass": "^1.74.1",
     "styled-components": "^6.1.8",
     "v4": "^0.0.1"
